--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Pathway+Extreme:wght@300;500;600&display=swap" rel="stylesheet">
 
+      <link rel="icon" href="./img/icon.png">
+
       <title>Plane Spot Counter</title>
 </head>
 
